<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.gn.cartoon.ui.activitys.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#00ffff" />


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:drawableLeft="@drawable/we_chat"
                android:drawablePadding="@dimen/dp10"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp3"
                android:background="@null"
                android:hint="@string/login_accout"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingTop="@dimen/dp3"
                android:singleLine="true"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@color/split_color" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20">

            <AutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp3"
                android:background="@null"
                android:hint="@string/login_password"
                android:drawableLeft="@drawable/we_chat"
                android:drawablePadding="@dimen/dp10"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="@dimen/dp3"
                android:singleLine="true"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@color/split_color" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:text="记住密码" />

        <Button
            android:id="@+id/dm_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/base_title_bg"
            android:text="@string/dm_login_login"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dm_login_find_pwd"
                android:text="找回密码" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/dm_login_register"
                android:text="去注册" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginTop="@dimen/dp20"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="微信"
                android:textSize="@dimen/sp12"
                android:id="@+id/dm_login_wechat_login"
                android:layout_marginRight="@dimen/dp20"
                android:drawableTop="@drawable/we_chat"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="QQ"
                android:id="@+id/dm_login_qq_login"
                android:textSize="@dimen/sp12"
                android:drawableTop="@drawable/qq"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
